assets/css/style.css
* {
    box-sizing: border-box;
    box-shadow: inset;
}

/* :root {
    var(--Color1: #fff0f5),
    var(--Color2: #bc8f8f),
    var(--Color3: #000000),
    var(--color4: #4169e1),
} */

body {
    margin: 0;
    padding: 0;
    font-family: cursive;
    color:black;
    background-color:lavenderblush;
    line-height: 2;
}

header {
    margin-bottom: 10px;
    padding-top: 30px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
    background-color:rosybrown;
    box-shadow: 10px 5px 5px black;
    padding-left: 10px;
    padding-right: 15px;
}

header h1 {
    color: black;
    background-color:rosybrown;
    padding: 2px;
    margin: 0;
    font-size: 45px;
    line-height: 45px;
    text-align: center;
}

nav {
    display:flexbox;
    flex-direction:row;
    flex-wrap: wrap;
}

nav a {
    text-decoration:underline;
    color:black;
    padding: 3px;
    margin-left: 100;
    background-image:linear-gradient(90deg);
    background-size: 100%;
    background-position: bottom;
    transition: all 0.30s ease-in-out;
    font-size: 25px;
}

nav a:hover {
    color:royalblue;
    box-shadow: lavenderblush 30px 30px 30px solid;
}

main {
    margin-top: 20px;
    margin-bottom: 45px;
}


.hero-banner {
    background-image: url(../images/pngtree-taobao-refreshing-summer-three-dimensional-crystal-triangle-line-banner-picture-image_992457.png);
    background-repeat: repeat;
    background-size: cover;
    background-position: center;
    min-height: 160px;
    min-width: 70px;
    padding: 5px;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    text-align: right;
    align-content: flex-end;
}

.hero-banner div {
    flex: 0 0 90%;
}

.hero-banner h2 {
    display: flex;
    justify-content:center;
    color:black;
    font-size: 25px;
    margin-top: 50px;
    text-shadow: 2.5px 2.5px 2.5px rosybrown;
    background-color: lavenderblush;
    width: 30%;
    margin-left: 690px;
    text-align: center;
    box-shadow: 5px 5px 5px rosybrown;
}

.About-Me {
    display: flex;
    margin-bottom: 50px;
}

.About-Me h2 {
    font-size: 40px;
    display:inline-block;
    text-shadow: 5px 5px 5px rosybrown;
}

#BlankDiv {
    display: flex;
    width: 900px;
 } 

.About-Me div {
    border-left: 5px solid rosybrown;
    padding-left: 40px;
    margin-left: 38px;
}

.Picture {
    height: 250px;
    width: 250px;
    padding-top: 8px;
}

.Work {
    display:flex;
    padding-left: 75px;
}

.Work h2 {
    font-size: 40px;
    text-shadow: 5px 5px 5px rosybrown;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: content;
    border-left: 5px solid rosybrown;
    padding-left: 40px;
    margin-left: 40px;
    gap: 8px;
}

.BundleofCodes, .GirlCodeCollection, .SwankyDeveloper, .CodeRunsonFemale, .JoinMeForJava {
    border: royalblue solid 5px;
    min-height: 285px;
    max-height: 285px;
    min-width: 248px;
    display:inline-flex;
    align-items: flex-end;
    background-blend-mode: soft-light;
    transition: all 0.5s ease-in-out;
    margin-bottom: 2px;
    border-radius: 3px;
    color: black;
    font-size: 20px;
    text-transform: 10px;
    letter-spacing: 0px;
    line-height: 0px;
    text-decoration: none;
    box-shadow: 10px 10px 10px rosybrown
}

.BundleofCodes {
    flex-basis: 225000px;
    margin-right: 93px;
    padding-top: 150px;
    padding-bottom: 0px;
}

.Card:hover {
    background-color: rgba(0,0,0,0.2);
}

.Card-text {
    background-color: rosybrown;
}

.ContactMe {
    display: flex;
    margin-bottom: 50px;
    margin-top: 50px;
}

.ContactMe h2 {
    font-size: 35px;
    text-shadow: 5px 5px 5px rosybrown;
}

.ContactMe div {
    border-left: 5px solid rosybrown;
    padding-left: 40px;
    margin-left: 36px;
}

.Contacts {
    display: flex;
    gap: 10px;
    justify-content: center;
    font-size: 25px;
    margin-inline-start: 295px;
    margin-top: 70px;
}

.Contacts a:hover {
    background-size: 100% 100%;
    color:royalblue;
}

footer {
    text-align: center;
}

.link {
    color:black;
}

.BundleofCodes {
    background-image: url(../images/10-hero-image-website-ideas-to-inspire-you-2.png);
    background-size: 1170px;
}

.GirlCodeCollection {
    background-image: url(../images/Your_Digital_Personal_Trainer_.png);
    background-size: 200px;
    background-position: center;
    color: white !important;
}

.SwankyDeveloper {
    background-image: url(../images/images-7.jpg);
}

.CodeRunsonFemale {
    background-image: url(../images/images.png);
    background-position: center;
    background-size: 370px;
}

.JoinMeForJava {
    background-image: url(../images/beach-sunset-color-palette-hex-codes-pastel-colors-visme.jpg);
    background-position:center;
    background-size: 840px;
}

@media screen and (max-width: 768px) {
    header {
        padding: 5px 5px 5px 5px;
        justify-content: center;
        text-align: center;
    }
 }

@media screen and (max-width: 768px) {
    header h1 {
    font-size: 20px;
    text-align: center;
    justify-content: center;
    }
 }

@media screen and (max-width: 768px) {
    header nav {
    justify-content: center;
 }
}

@media screen and (max-width:768px) {
    .About-Me div {
        font-family:'Times New Roman', Times, serif
    }
}

@media screen and (max-width: 768px) {
    .BundleofCodes, .GirlCodeCollection, .SwankyDeveloper, .CodeRunsonFemale, .JoinMeForJava {
    text-align: center;
    justify-content: center;
    }
}

@media screen and (max-width: 768px) {
    .ContactMe {
        flex-direction: column;
        justify-content: center;
    }

@media screen and (max-width:768px) {
        footer {
            justify-content: center;
        }
    }    
}

/* .header-test {
    display: flex;
    flex-wrap: wrap;
} */

